--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                         
                         <div class="bg-gray-50 rounded overflow-hidden shadow-sm hover:shadow-md transition-shadow">
                             <div class="h-64 overflow-hidden">
-                                <img src="https://i.pinimg.com/236x/ee/cf/ca/eecfcaf31a4d84fbd524f414cc350dec.jpg" alt="Анна Кузнецова" class="w-full h-full object-cover object-top">
+                                <img src="https://static.tildacdn.com/tild6539-3331-4630-b163-343439363538/f360e42d-8a61-4c0d-b.jpg" alt="Анна Кузнецова" class="w-full h-full object-cover object-top">
                             </div>
                             <div class="p-6">
                                 <h3 class="text-xl font-semibold mb-1">Анна Кузнецова</h3>
